# dishcovery

./: .gitignore  ADR.md  AGENTS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  test_dataset.py
.beads/: issues.jsonl
api/: Dockerfile  README.md  index-mapping.json  main.py  models.py  pyproject.toml
api/static/: styles.css
api/templates/: index.html
api/templates/partials/: filter_options.html  filter_sidebar.html  search_response.html  search_results.html  search_results_append.html
app/: Dockerfile  config.py  elasticsearch_client.py  index-mapping.json  main.py  models.py  pyproject.toml
data/: example_output.json
k8s/elasticsearch/: pvc.yaml  service.yaml  statefulset.yaml
k8s/fastapi/: service.yaml
k8s/monitoring/prometheus/: configmap.yaml  deployment.yaml  prometheus.yml  service.yaml
scripts/: dedupe_recipes.py  test_dataset.py
ui/: Dockerfile  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
ui/app/: app.config.ts  app.vue
ui/app/assets/css/: main.css
ui/app/components/: FiltersSidebar.vue  RecipeCard.vue  ResultsFeed.vue  SearchBar.vue
