[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.120.4",
    "jinja2>=3.1.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
